@@ -1,1 +1,1 @@
-2.0.0-rc1
+2.0.0-rc2
